* bug fix #1045363 New <br> and &nbsp; 'feature'
* refactor the jar files :
  - myfaces-jsf-api.jar contains the api classes (no change)
  - myfaces-impl.jar contains the standard jsf implementation
  - myfaces-extensions.jar contains the myfaces extensions
  - myfaces.jar containes all the myfaces code, and can be used in place of the 3 above
----------------------------------------------------------------------
Changes in Release 1.0.7 beta
* new custom component: HtmlPanelStack
* new custom component: Stylesheet
* new extended HtmlInputTextarea component (with user role support)
* new Autoscroll feature (restores horizontal and vertical browser page scrolling)
* new previousRowDataVar attribute in extended HtmlDataTable (see tld description)
* Japanese translation
* fixed problems with nested UIData and HtmlDataTable components
* writeText method in default ResponseWriter now maps newlines to <br/> and
  successive spaces to &nbsp; entities
* corrected some problems with rowIndexVar and rowCountVar in HtmlDataList
* extended HtmlDataTable now also supports rowIndexVar and rowCountVar
* bug #1020264 x:navigationMenuItem icon problem
* bug #1010800 [PATCH] improve examples's i18n and Japanese support
* bug #1019443 no setter method corresponding to TLD declared attribute
* bug #1019807 add anothere DTD System ID for web.xml
* bug #1038697 h:selectOneRadio generates malformed XHTML
* bug #1038716 Empty h:selectManyCheckbox generates malformed HTML
* bug #1031187 [PATCH] JspViewHandlerImpl: Remove dep on ServletRequest
* bug #1031182 [PATCH] FacesMessage.getDetail
* bug #998464 request charset handling is invalid
* bug #1001511 fileupload compponent don't support setHeaderEncoding
* bug #1008043 applied patch for ServletExternalContextImpl by Takashi Okamoto
* fixed StackOverflow in ClassUtils and cleaned up ClassUtils methods
* full revision of extended HtmlDataTable so that there is no more cache problem
* HtmlCommandSortHeader now supports immediate attribute