@@ -5,4 +5,5 @@ target
 release
 .project
 .classpath
+bin
 test-results
