@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE component PUBLIC
+  "-//MyFaces//DTD MyFaces component def 1.0//EN"
+  "http://myfaces.apache.org/dtd/Component.dtd">
+<component generateStateMethods="false" >
+    <component-class>org.apache.myfaces.custom.aliasbean.AliasBean</component-class>
+    <base-class>javax.faces.component.UIInput</base-class>
+    <component-type>org.apache.myfaces.AliasBean</component-type>
+    <component-family>javax.faces.Input</component-family>
+</component>
