@@ -1,0 +1,44 @@
+/*
+ * Copyright 2004 The Apache Software Foundation.
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.myfaces.custom.aliasbean;
+
+import javax.faces.component.UIComponent;
+import javax.faces.context.FacesContext;
+import javax.faces.render.Renderer;
+
+/**
+ * @author Sylvain Vieujot (latest modification by $Author$)
+ * @version $Revision$ $Date$
+ * $Log$
+ * Revision 1.1  2004/11/08 20:43:15  svieujot
+ * Add an x:aliasBean component
+ *
+ */
+public class AliasBeanRenderer extends Renderer {
+
+    public void encodeEnd(FacesContext facesContext, UIComponent uiComponent) {
+        AliasBean aliasBean = (AliasBean)uiComponent;
+        aliasBean.makeAlias(facesContext);
+    }
+
+    public void decode(FacesContext facesContext, UIComponent uiComponent) {
+        // noop
+    }
+
+    public Object getConvertedValue(FacesContext context, UIComponent uiComponent, Object submittedValue) {
+        return null;
+    }
+}
