@@ -1381,6 +1381,28 @@
 
 <!--     Custom non-component tags     -->
 
+	<!-- aliasBean -->
+    <tag>
+        <name>aliasBean</name>
+        <tag-class>org.apache.myfaces.custom.aliasbean.AliasBeanTag</tag-class>
+        <body-content>JSP</body-content>
+        <attribute>
+            <name>id</name>
+            <required>false</required>
+            <rtexprvalue>false</rtexprvalue>
+        </attribute>
+        <attribute>
+            <name>sourceBean</name>
+            <required>true</required>
+            <rtexprvalue>false</rtexprvalue>
+        </attribute>
+        <attribute>
+            <name>alias</name>
+            <required>true</required>
+            <rtexprvalue>false</rtexprvalue>
+        </attribute>
+    </tag>
+
     <!-- saveState -->
     <tag>
         <name>saveState</name>
